force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospective Client</fullName>
            </value>
            <value>
                <fullName>Prospective Lawyer</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Lawyer</fullName>
            </value>
            <value>
                <fullName>Law Firm</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Treatment Provider Firm</fullName>
            </value>
            <value>
                <fullName>Assessment Funding</fullName>
            </value>
            <value>
                <fullName>Litigation Lender</fullName>
            </value>
            <value>
                <fullName>Assessment Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>