force-app/main/default/objects/Account/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <description>Additional Information</description>
    <inlineHelpText>Additional Information</inlineHelpText>
    <label>Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>