force-app/main/default/objects/Account/fields/Admin_Fee_as_of_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee_as_of_To_Date__c</fullName>
    <inlineHelpText>Admin Fees as they were on the To date of the reporting period.  This is rolling up admin fees on Opportunity which in turn rolled up Drawdowns.</inlineHelpText>
    <label>Admin Fee as of To Date</label>
    <summarizedField>Opportunity.Admin_Fee_as_of_To_Date__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>