force-app/main/default/objects/Account/fields/All_Payout_Balance__c.field-meta.xml
<CustomField>
    <fullName>All_Payout_Balance__c</fullName>
    <label>All Payout Balance</label>
    <summarizedField>Opportunity.Payout_Balance__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>