force-app/main/default/objects/Account/fields/All_Payout_Interest__c.field-meta.xml
<CustomField>
    <fullName>All_Payout_Interest__c</fullName>
    <label>All Payout Interest</label>
    <summarizedField>Opportunity.Payout_Interest__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Stage_Status__c</field>
        <operation>equals</operation>
        <value>Active, Active - Partial Payment</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>