force-app/main/default/objects/Account/fields/Amount_Paid_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_to_Client__c</fullName>
    <label>Amount Paid to Client</label>
    <summarizedField>Opportunity.Amount_Paid_to_Client__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>