force-app/main/default/objects/Account/fields/Assessment_Provider_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Provider_Report_Date__c</fullName>
    <formula>$Setup.Assessment_Provider_Summary_Report__c.Report_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessment Provider Report Date</label>
    <type>Date</type>
</CustomField>