force-app/main/default/objects/Account/fields/Authorization_Clause__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Clause__c</fullName>
    <description>This field is used to dynamically show the &#39;conflict/interest&#39; clause in the loan document.</description>
    <label>Authorization Clause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>