force-app/main/default/objects/Account/fields/CM_Application_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>CM_Application_Template_Id__c</fullName>
    <description>This field is used for the conga merge process (can be migrated to a custom setting in the future)</description>
    <formula>IF(
ISPICKVAL(Business_Unit__c,&quot;Rhino&quot;)
, &quot;a0x0L00000ObLGn&quot;
, &quot;a0x0L00000LQTKY&quot;
)</formula>
    <label>CM: Application Template Id</label>
    <type>Text</type>
</CustomField>