force-app/main/default/objects/Account/fields/CM_Lawyer_Fax__c.field-meta.xml
<CustomField>
    <fullName>CM_Lawyer_Fax__c</fullName>
    <formula>Related_Law_Firm__r.Fax</formula>
    <label>CM: Lawyer Fax</label>
    <type>Text</type>
</CustomField>