force-app/main/default/objects/Account/fields/Conga_Account_Notes_URL__c.field-meta.xml
<CustomField>
    <fullName>Conga_Account_Notes_URL__c</fullName>
    <formula>&quot;/apex/AccountNotesPrintable?Id=&quot;&amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Account Notes URL</label>
    <type>Text</type>
</CustomField>