force-app/main/default/objects/Account/fields/Conga_Formula_Principal_Total__c.field-meta.xml
<CustomField>
    <fullName>Conga_Formula_Principal_Total__c</fullName>
    <label>Conga Formula Principal Total</label>
    <summarizedField>Opportunity.Conga_Formula_Principal_Total__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>