force-app/main/default/objects/Account/fields/Conga_Printable_Preview_URL__c.field-meta.xml
<CustomField>
    <fullName>Conga_Printable_Preview_URL__c</fullName>
    <formula>&quot;/apex/APXTConga4__Conga_Composer?SolMgr=1&amp;serverUrl=&quot;&amp; 
$Api.Partner_Server_URL_370 &amp;
&quot;&amp;Id=&quot;&amp; Id &amp;
&quot;&amp;QueryId=[AccOppty]a0p0L00000JSOkK&quot;&amp;&quot;%3Fpv0%3D&quot;&amp; Id &amp;&quot;,&quot;&amp;&quot;[AccCon]a0p0L00000JSOkA%3Fpv0%3D&quot;&amp; Id &amp;
&quot;&amp;TemplateId=a0x0L00000PVUBs&amp;DS7=3&amp;DefaultPDF=1&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Printable Preview URL</label>
    <type>Text</type>
</CustomField>