force-app/main/default/objects/Account/fields/Conga_Send_Payout_Email_URL__c.field-meta.xml
<CustomField>
    <fullName>Conga_Send_Payout_Email_URL__c</fullName>
    <formula>&quot;/apex/APXTConga4__Conga_Composer?SolMgr=1&amp;serverUrl=&quot;&amp;
$Api.Partner_Server_URL_370
&amp; &quot;&amp;QueryId=[AccOppty]a0p0L00000JSOkK?pv0=&quot;&amp; Id &amp; &quot;,&quot;
&amp; &quot;[AccTrans]a0p0L00000JSOkP?pv0=&quot;&amp; Id &amp; &quot;,&quot;
&amp; &quot;[AccTransTreatment]a0p0L00000JSOkU?pv0=&quot;&amp; Id
&amp; &quot;&amp;TemplateId=&quot; &amp; IF( ISPICKVAL( Business_Unit__c , &quot;Rhino&quot;) , &quot;a0x0L00000PH6HP&quot;, &quot;a0x0L00000PVUC7&quot;)
&amp; &quot;&amp;EmailTemplateId=a0o0L00000LLxJ1QAL&quot;
&amp; &quot;&amp;defaultpdf=1&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Send Payout Email URL</label>
    <type>Text</type>
</CustomField>