force-app/main/default/objects/Account/fields/Conga_Transaction_Printable_Preview__c.field-meta.xml
<CustomField>
    <fullName>Conga_Transaction_Printable_Preview__c</fullName>
    <formula>&quot;/apex/APXTConga4__Conga_Composer?SolMgr=1&amp;serverUrl=&quot;&amp; 
$Api.Partner_Server_URL_370 &amp; 
&quot;&amp;Id=&quot;&amp; Id &amp; 
&quot;&amp;QueryId=[AccTrans]a0p0L00000JSOkP?pv0=&quot;&amp; Id &amp; 
&quot;&amp;TemplateId=a0x0L00000PVUCH&amp;DS7=3&amp;ExcelAutoFitColumns=1&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Transaction Printable Preview</label>
    <type>Text</type>
</CustomField>