force-app/main/default/objects/Account/fields/Current_Tx__c.field-meta.xml
<CustomField>
    <fullName>Current_Tx__c</fullName>
    <description>Current Tx</description>
    <inlineHelpText>Current Tx</inlineHelpText>
    <label>Current Tx</label>
    <type>TextArea</type>
</CustomField>