force-app/main/default/objects/Account/fields/Date_of_Advance__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Advance__c</fullName>
    <label>Date of Advance</label>
    <summarizedField>Opportunity.Date_of_advance__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>