force-app/main/default/objects/Account/fields/Date_Retained__c.field-meta.xml
<CustomField>
    <fullName>Date_Retained__c</fullName>
    <description>When was the Lawyer / Paralegal retained?</description>
    <label>Date Retained</label>
    <type>Date</type>
</CustomField>