force-app/main/default/objects/Account/fields/Drawdown_Total_w_o_Payment__c.field-meta.xml
<CustomField>
    <fullName>Drawdown_Total_w_o_Payment__c</fullName>
    <label>Drawdown Total w/o Payment</label>
    <summarizedField>Opportunity.Drawdown_Total_wo_Payment__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>