force-app/main/default/objects/Account/fields/Email_Additional_Notes_Law_Firm_Report__c.field-meta.xml
<CustomField>
    <fullName>Email_Additional_Notes_Law_Firm_Report__c</fullName>
    <formula>$Setup.Conga_batch_setting__c.Email_Additional_Notes_Law_Firm_Report__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Additional Notes Law Firm Report</label>
    <type>Text</type>
</CustomField>