force-app/main/default/objects/Account/fields/First_Party_Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>First_Party_Insurance_Company__c</fullName>
    <description>First Party</description>
    <label>First Party Insurance Company</label>
    <type>TextArea</type>
</CustomField>