force-app/main/default/objects/Account/fields/Is_Selected__c.field-meta.xml
<CustomField>
    <fullName>Is_Selected__c</fullName>
    <formula>CONTAINS($Setup.Assessment_Provider_Summary_Report__c.Selected_Ids__c, Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Selected</label>
    <type>Checkbox</type>
</CustomField>