force-app/main/default/objects/Account/fields/Law_Firm_Pipeline_Report__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Pipeline_Report__c</fullName>
    <formula>HYPERLINK(&quot;/00O0L000003d6B7?pv0=&quot;&amp;Id, &quot;Click Here&quot;, &quot;_blank&quot;)</formula>
    <label>Law Firm Pipeline Report</label>
    <type>Text</type>
</CustomField>