force-app/main/default/objects/Account/fields/Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Lawyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lawyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Lawyer__c)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>