force-app/main/default/objects/Account/fields/Lawyer_s_Assistant_Paralegal_LC_Info__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_s_Assistant_Paralegal_LC_Info__c</fullName>
    <description>Lawyer’s Assistant / Paralegal / LC Info</description>
    <inlineHelpText>Lawyer’s Assistant / Paralegal / LC Info</inlineHelpText>
    <label>Lawyer’s Assistant / Paralegal / LC Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>