force-app/main/default/objects/Account/fields/Loan_To_Value1__c.field-meta.xml
<CustomField>
    <fullName>Loan_To_Value1__c</fullName>
    <formula>IF(AND(Projected_Loan_Value__c &gt; 0, Total_Drawdown_Amount__c &gt; 0), Total_Drawdown_Amount__c/Projected_Loan_Value__c,0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan To Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>