force-app/main/default/objects/Account/fields/Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Name_Formula__c</fullName>
    <formula>IF(CONTAINS( TRIM(Name)   , &#39;- Account # &#39;),  SUBSTITUTE(Name, &#39;- Account # &#39;, &#39;- 0000&#39;),  IF(CONTAINS( TRIM(Name)   , &#39;-Account # &#39;), SUBSTITUTE(Name, &#39;-Account # &#39;, &#39;- 0000&#39;), IF(CONTAINS( TRIM(Name)   , &#39;- Account #&#39;), SUBSTITUTE(Name, &#39;- Account #&#39;, &#39;- 0000&#39;),  IF(CONTAINS( TRIM(Name)   , &#39;-Account #&#39;), SUBSTITUTE(Name, &#39;-Account #&#39;, &#39;- 0000&#39;), TRIM(Name)) ) ) )</formula>
    <label>Name Formula</label>
    <type>Text</type>
</CustomField>