force-app/main/default/objects/Account/fields/Payout_Date_Law_Firm_Report__c.field-meta.xml
<CustomField>
    <fullName>Payout_Date_Law_Firm_Report__c</fullName>
    <formula>$Setup.Conga_batch_setting__c.Payout_Date_Law_Firm_Report__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payout Date Law Firm Report</label>
    <type>Date</type>
</CustomField>