force-app/main/default/objects/Account/fields/Primary_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Bank Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Bank_Account__c.Client__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Primary_Bank_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>