force-app/main/default/objects/Account/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the key person to contact about inquiries related to this account: loan related, additional information, payments, receivables, etc.</inlineHelpText>
    <label>Primary Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>There are no contacts under this account that matches the search criteria.</errorMessage>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <infoMessage>Please select the contact that will serve as primary contact for this account.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>