force-app/main/default/objects/Account/fields/Principal__c.field-meta.xml
<CustomField>
    <fullName>Principal__c</fullName>
    <label>Principal</label>
    <summarizedField>Opportunity.Principal__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>