force-app/main/default/objects/Account/fields/Principal_Repaid_as_of_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Principal_Repaid_as_of_To_Date__c</fullName>
    <label>Principal Repaid as of To Date</label>
    <summarizedField>Opportunity.Principal_Repaid_as_of_To_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Stage_Status__c</field>
        <operation>equals</operation>
        <value>Active - Partial Payment</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>