force-app/main/default/objects/Account/fields/Prior_Injury__c.field-meta.xml
<CustomField>
    <fullName>Prior_Injury__c</fullName>
    <description>Prior Injury</description>
    <inlineHelpText>Prior Injury</inlineHelpText>
    <label>Prior Injury</label>
    <type>TextArea</type>
</CustomField>