force-app/main/default/objects/Account/fields/ProvinceResidency__c.field-meta.xml
<CustomField>
    <fullName>ProvinceResidency__c</fullName>
    <label>Province of Residency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Provinces</valueSetName>
    </valueSet>
</CustomField>