force-app/main/default/objects/Account/fields/Rebate_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rebate Allowed</label>
    <type>Checkbox</type>
</CustomField>