force-app/main/default/objects/Account/fields/Related_Law_Firm__c.field-meta.xml
<CustomField>
    <fullName>Related_Law_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Law Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>