force-app/main/default/objects/Account/fields/Replacement_Counsel_Document_Generate__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Counsel_Document_Generate__c</fullName>
    <formula>&quot;/apex/APXTConga4__Conga_Composer?id=&quot;&amp;Id&amp;&quot;&amp;TemplateID=&quot;&amp;IF(ISPICKVAL(Business_Unit__c,&quot;ELFI&quot;),$Label.ELFI_Replacement_Counsel_Document,$Label.Rhino_Replacement_Counsel_Document)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Replacement Counsel Document Generate</label>
    <type>Text</type>
</CustomField>