force-app/main/default/objects/Account/fields/Report_Date_Law_Firm_Report__c.field-meta.xml
<CustomField>
    <fullName>Report_Date_Law_Firm_Report__c</fullName>
    <formula>$Setup.Conga_batch_setting__c.Report_Date_Law_Firm_Report__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Date Law Firm Report</label>
    <type>Date</type>
</CustomField>