force-app/main/default/objects/Account/fields/Reporting_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_From_Date__c</fullName>
    <inlineHelpText>The minimum Reporting From Date on all of the Drawdowns which are eligible for inclusion in the Portfolio reports.</inlineHelpText>
    <label>Reporting From Date</label>
    <summarizedField>Opportunity.Reporting_From_Date__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>