force-app/main/default/objects/Account/fields/Reporting_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_To_Date__c</fullName>
    <inlineHelpText>The maximum Reporting TO Date on all of the Drawdowns which are eligible for inclusion in the Portfolio reports.</inlineHelpText>
    <label>Reporting To Date</label>
    <summarizedField>Opportunity.Reporting_To_Date__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>