force-app/main/default/objects/Account/fields/Selected_for_Assessment_Payout__c.field-meta.xml
<CustomField>
    <fullName>Selected_for_Assessment_Payout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected for Assessment Payout</label>
    <type>Checkbox</type>
</CustomField>