force-app/main/default/objects/Account/fields/Status_of_A_B_Claim_how_much_and_when__c.field-meta.xml
<CustomField>
    <fullName>Status_of_A_B_Claim_how_much_and_when__c</fullName>
    <description>Status of A/B Claim (how much and when)</description>
    <inlineHelpText>Status of A/B Claim (how much and when)</inlineHelpText>
    <label>Status of A/B Claim (how much and when)</label>
    <type>TextArea</type>
</CustomField>